--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,14 @@ name: CI - Testes com Maven Wrapper
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
       - 'LICENSE'
       - 'CONTRIBUTING.md'
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
     paths-ignore:
       - 'README.md'
       - 'docs/**'
